2.1.0/_sources/gallery/mplot3d/3d_bars.rst.txt


.. _sphx_glr_gallery_mplot3d_3d_bars.py:


=====================
Demo of 3D bar charts
=====================

A basic demo of how to plot 3D bars with and without
shading.





.. image:: /gallery/mplot3d/images/sphx_glr_3d_bars_001.png
    :align: center





.. code-block:: python


    import numpy as np
    import matplotlib.pyplot as plt
    from mpl_toolkits.mplot3d import Axes3D


    # setup the figure and axes
    fig = plt.figure(figsize=(8, 3))
    ax1 = fig.add_subplot(121, projection='3d')
    ax2 = fig.add_subplot(122, projection='3d')

    # fake data
    _x = np.arange(4)
    _y = np.arange(5)
    _xx, _yy = np.meshgrid(_x, _y)
    x, y = _xx.ravel(), _yy.ravel()

    top = x + y
    bottom = np.zeros_like(top)
    width = depth = 1

    ax1.bar3d(x, y, bottom, width, depth, top, shade=True)
    ax1.set_title('Shaded')

    ax2.bar3d(x, y, bottom, width, depth, top, shade=False)
    ax2.set_title('Not Shaded')

    plt.show()

**Total running time of the script:** ( 0 minutes  0.048 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: 3d_bars.py <3d_bars.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: 3d_bars.ipynb <3d_bars.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
